Fix #367: UI alignment fixes when FI translation is enabled

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -323,7 +323,7 @@ progress {
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	left: 0;
 	margin-top: 1.5em;
@@ -637,7 +637,7 @@ input.input-row {
 	display: flex;
 	align-items: center;
 	flex-grow: 1; /* Take up remaining space */
-	//width: auto; /* Automatically adjust to content */
+	width: 100%;
 	margin-top: 8px;
 	margin-bottom: 8px;
 }
